[project]
name = "ai-chatbots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "make>=0.1.6.post2",
    "streamlit>=1.45.1",
    "tavily-python>=0.7.5",
]

[tool.uv.workspace]
members = [
    "src",
    "src/graphs",
    "src/nodes",
    "src/llms",
    "src/state",
    "src/frontend",
    "src/tools",
]
